<resources>
	<string name="app_name">宿客</string>
	<string name="main_tab_home">首页</string>
	<string name="main_tab_mine">我的</string>

	<string name="submit">提交</string>
	<string name="confirm">确认</string>
	<string name="cancel">取消</string>
	<string name="pwd_limit">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM_</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_login">LoginActivity</string>
	<string name="action_settings">Settings</string>
	<string name="login_username_hint">手机号</string>
	<string name="login_password_hint">密码</string>
	<string name="login_login">登录</string>
	<string name="login_forget_pwd">忘记密码?</string>
	<string name="register_phone_number_hint">请输入手机号</string>
	<string name="register_get_sms">获取验证码</string>
	<string name="register_sms_hint">请输入验证码</string>
	<string name="register_nickname_hint">请输入昵称</string>
	<string name="register_password_hint">请输入密码</string>
	<string name="register_register">注册</string>
	<string name="mine_edit_info">完善信息</string>
	<string name="mine_publish">我的发布</string>
	<string name="mine_setting">设置</string>
	<string name="title_activity_user_info_complete">userInfoComplete</string>
	<string name="user_nickname_edit">修改</string>
	<string name="user_header_edit">修改头像</string>
	<string name="user_nickname">昵称</string>
	<string name="user_pwd">密码</string>
	<string name="user_phone">手机号</string>
	<string name="user_QQ">QQ</string>
	<string name="user_name">姓名</string>
	<string name="user_name_edit">真实姓名</string>
	<string name="user_sex">性别</string>
	<string name="user_select">请选择</string>
	<string name="user_input">请输入</string>
	<string name="user_age">年龄</string>
	<string name="user_birthplace">籍贯</string>
	<string name="user_address">居住地</string>
	<string name="user_job">工作</string>
	<string name="publish_type">您要发布的房源类型？</string>
	<string name="publish_zhengzu">整租</string>
	<string name="publish_zhengzu_hint">出租您的整套房子</string>
	<string name="publish_hezu">合租</string>
	<string name="publish_hezu_hint">出租您的单间房子</string>
	<string name="publish_house_type">出租的户型</string>
	<string name="publish_house_type_shi">室</string>
	<string name="publish_house_type_ting">厅</string>
	<string name="publish_house_type_wei">卫</string>
	<string name="publish_house_type_yangtai">阳台</string>
	<string name="publish_next">下一步</string>
	<string name="publish_match">房源的配套设施</string>
	<string name="publish_price_hint">设置您房源的地址及价格</string>
	<string name="publish_price_setting">设置价格</string>
	<string name="publish_price_input">输入您房源的价格</string>
	<string name="unit_rmb">元</string>
	<string name="publish_price_address">设置地址</string>
	<string name="feedback_content">意见内容</string>
	<string name="feedback_content_hint">请留下您宝贵的意见（最多400字）</string>
	<string name="feedback_contact_hint">请求下您的联系电话或邮箱</string>
	<string name="user_info_accept_hezu">是否愿意合租</string>
	<string name="setting_feedfack">用户反馈</string>
	<string name="setting_change_pwd">修改密码</string>
	<string name="setting_logout">退出登录</string>
	<string name="house_detail_read_more">查看更多</string>
	<string name="house_detail_fangyuanqingkuang">房源情况</string>
	<string name="house_detail_fangxing">房型：</string>
	<string name="house_detail_mianji">面积：</string>
	<string name="house_detail_louceng">楼层：</string>
	<string name="house_detail_chaoxiang">朝向：</string>
	<string name="house_detail_zhuangxiu">装修：</string>
	<string name="house_detail_fabushijian">发布时间：</string>
	<string name="house_detail_sheshi">配套设施</string>
	<string name="pwd_modify_sms">验证码:</string>
	<string name="pwd_modify_sms_hint">请输入验证码</string>
	<string name="pwd_modify_new_pwd">新密码:</string>
	<string name="pwd_modify_new_pwd_hint">请输入新密码</string>
	<string name="house_detail_zhengzu">整租</string>
	<string name="house_detail_hezu">邀请合租</string>
	<string name="search_time_order">时间排序</string>
	<string name="search_location_select">位置区域</string>
	<string name="search_filter">筛选</string>
	<string name="popup_publish_time_order">按发布时间</string>
	<string name="popup_hits_order">按点击率</string>
	<string name="popup_price_order_desc">按价格从高到低</string>
	<string name="popup_price_order_asc">按价格从低到高</string>
	<string name="search_filter_price">价格区间（元）</string>
	<string name="search_filter_type">出租类型</string>
	<string name="search_filter_type_zhengtao">整套出租</string>
	<string name="search_filter_type_hezu">合租房间</string>
	<string name="search_filter_huxing">房屋户型</string>
	<string name="pulish_house_mianji">房源面积</string>
	<string name="publish_house_chaoxiang">房源朝向</string>
	<string name="publish5_house_title">房源标题</string>
	<string name="publish5_house_title_hint">为您的房源拟写标题</string>
	<string name="publish5_house_description">房源描述</string>
	<string name="publish5_house_description_hint">为您的房源拟写标题</string>
	<string name="publish5_delete">删除</string>
	<string name="publish5_publish">发布房源</string>
	<string name="publish2_zhuangxiu">装修程度</string>


</resources>
