<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	android:orientation="vertical"
	tools:context="com.firstblood.miyo.activity.publish.PublishActivity5">

    <include
        android:id="@+id/publish5_title"
        layout="@layout/activity_base_title_bar"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:id="@+id/publish5_root_ll"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.firstblood.miyo.view.gridview.UnScrollGridView
				android:id="@+id/publish5_gv"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:horizontalSpacing="@dimen/small_space"
				android:numColumns="3"
				android:padding="@dimen/middle_space"
				android:verticalSpacing="@dimen/small_space"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/middle_space"
				android:text="@string/publish5_house_title"
				android:textSize="@dimen/middle_text_size"
				android:textStyle="bold"/>

			<EditText
				android:id="@+id/publish5_title_et"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/middle_space"
				android:background="@drawable/shape_gray_rectangle_border_bg"
				android:hint="@string/publish5_house_title_hint"
				android:maxLength="20"
				android:padding="@dimen/middle_space"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/middle_space"
				android:text="@string/publish5_house_description"
				android:textSize="@dimen/middle_text_size"
				android:textStyle="bold"/>

			<EditText
				android:id="@+id/publish5_description_et"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/middle_space"
				android:background="@drawable/shape_gray_rectangle_border_bg"
				android:hint="@string/publish5_house_description_hint"
				android:maxLength="20"
				android:padding="@dimen/middle_space"/>
		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/publish5_delete_tv"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/large_space"
			android:text="@string/publish5_delete"
			android:textColor="@color/white"/>

		<RelativeLayout
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:layout_margin="@dimen/middle_space"
			android:background="@color/white"/>

		<TextView
			android:id="@+id/publish5_publish_tv"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/large_space"
			android:text="@string/publish5_publish"
			android:textColor="@color/white"/>
	</LinearLayout>
</LinearLayout>
