<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firstblood.miyo.activity.other.FeedbackActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <include
        android:id="@+id/feedback_title_bar"
        layout="@layout/activity_base_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/middle_space"
        android:layout_marginTop="@dimen/small_space">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_content"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/feedback_content_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:background="@color/white"
            android:hint="@string/feedback_content_hint"
            android:textSize="@dimen/small_text_size"
            android:gravity="top"
            android:layout_marginTop="@dimen/middle_space"
            android:maxLength="400"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="@dimen/small_space"
        android:padding="@dimen/middle_space">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="联系方式"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/feedback_contact_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_contact_hint"
            android:textSize="@dimen/small_text_size"
            android:gravity="top"
            android:background="@color/white"
            android:layout_marginTop="@dimen/middle_space"/>
    </LinearLayout>

    <Button
        android:id="@+id/feedback_submit_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="@dimen/middle_text_size"
        android:background="@drawable/shape_blue_rectangle_bg"
        android:layout_marginTop="@dimen/large_space"
        android:layout_marginBottom="@dimen/middle_space"
        android:layout_marginLeft="@dimen/super_space"
        android:layout_marginRight="@dimen/super_space"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>

</LinearLayout>
