<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_base_title_bar"/>

    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@drawable/bg_publish1">

        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/publish_type"
	        android:textColor="@color/white"
	        android:textSize="@dimen/large_text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/publish_zhengzu_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/middle_space">

        <ImageView
	        android:id="@+id/publish_zhengzu_iv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="@dimen/middle_space"
	        android:src="@drawable/icon_publish_zhengzu"/>

        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/middle_space"
	        android:layout_toRightOf="@id/publish_zhengzu_iv"
	        android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_zhengzu"
                android:textSize="@dimen/middle_text_size"
                android:textStyle="bold"/>

            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/small_space"
	            android:text="@string/publish_zhengzu_hint"
	            android:textColor="@color/darkgray"
	            android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="@dimen/middle_space"
	        android:src="@drawable/icon_next"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/publish_hezu_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/middle_space">

        <ImageView
	        android:id="@+id/publish_hezu_iv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="@dimen/middle_space"
	        android:src="@drawable/icon_publish_hezu"/>

        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/middle_space"
	        android:layout_toRightOf="@id/publish_hezu_iv"
	        android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_hezu"
                android:textSize="@dimen/middle_text_size"
                android:textStyle="bold"/>

            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/small_space"
	            android:text="@string/publish_hezu_hint"
	            android:textColor="@color/darkgray"
	            android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="@dimen/middle_space"
	        android:src="@drawable/icon_next"/>
    </RelativeLayout>

</LinearLayout>
